@@ -10,6 +10,8 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.23_01-dev
 
+'sub handler : method {}' is now treated as a method handler
+
 variable $Apache::Server::ConfigTestOnly is set to 1 if Apache
 is running in configuration test mode (httpd -t)
 [Eric Cholet <cholet@logilune.com>]
